force-app/main/default/objects/zkups__QueuedShipment__c/zkups__QueuedShipment__c.object-meta.xml
<CustomObject>
    <label>UPS Queued Shipment</label>
    <nameField>
        <displayFormat>Queued-Shipment-{00000000}</displayFormat>
        <label>Queued Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPS Queued Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>