force-app/main/default/objects/zkups__QueuedShipment__c/fields/zkups__DutiesAccountPostalCode__c.field-meta.xml
<CustomField>
    <fullName>zkups__DutiesAccountPostalCode__c</fullName>
    <label>Duties Account Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>