force-app/main/default/objects/zkups__QueuedShipment__c/fields/zkups__FirstReferenceType__c.field-meta.xml
<CustomField>
    <fullName>zkups__FirstReferenceType__c</fullName>
    <label>First Reference Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounts Receivable Customer Account</fullName>
            </value>
            <value>
                <fullName>Appropriation Number</fullName>
            </value>
            <value>
                <fullName>Bill of Lading Number</fullName>
            </value>
            <value>
                <fullName>Collect on Delivery (COD) Number</fullName>
            </value>
            <value>
                <fullName>Dealer Order Number</fullName>
            </value>
            <value>
                <fullName>Department Number</fullName>
            </value>
            <value>
                <fullName>FDA Product Code</fullName>
            </value>
            <value>
                <fullName>Invoice Number</fullName>
            </value>
            <value>
                <fullName>Manifest Key Number</fullName>
            </value>
            <value>
                <fullName>Model Number</fullName>
            </value>
            <value>
                <fullName>Part Number</fullName>
            </value>
            <value>
                <fullName>Production Code</fullName>
            </value>
            <value>
                <fullName>Purchase Order Number</fullName>
            </value>
            <value>
                <fullName>Purchase Request Number</fullName>
            </value>
            <value>
                <fullName>Return Authorization Number</fullName>
            </value>
            <value>
                <fullName>Salesperson Number</fullName>
            </value>
            <value>
                <fullName>Serial Number</fullName>
            </value>
            <value>
                <fullName>Store Number</fullName>
            </value>
            <value>
                <fullName>Transaction Reference Number</fullName>
            </value>
            <value>
                <fullName>Employer&apos;s ID Number</fullName>
            </value>
            <value>
                <fullName>Federal Taxpayer ID No.</fullName>
            </value>
            <value>
                <fullName>Social Security Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>