force-app/main/default/objects/zkups__QueuedShipment__c/fields/zkups__Lead__c.field-meta.xml
<CustomField>
    <fullName>zkups__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>UPS Queued Shipments</relationshipLabel>
    <relationshipName>UPS_Queued_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>