force-app/main/default/objects/zkups__QueuedShipment__c/fields/zkups__SenderEmail__c.field-meta.xml
<CustomField>
    <fullName>zkups__SenderEmail__c</fullName>
    <label>Sender Email</label>
    <type>Email</type>
</CustomField>