force-app/main/default/objects/zkups__QueuedShipment__c/fields/zkups__SenderState__c.field-meta.xml
<CustomField>
    <fullName>zkups__SenderState__c</fullName>
    <label>Sender State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>